--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
         <span>Anime Omake - IGN Video Series</span>
       </a>
     </div>
+
     <div class="item">
-      <a href="youtube.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/uWzSBA7D39pNAl9LEU/giphy.gif" alt="youtube commissions"></div>
-        <span>YouTube Gaming Commissions</span>
+      <a href="up-at-noon.html">
+        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/jOsk1kW9Z49gbU6ORo/source.gif" alt="up at noon"></div>
+        <span>Up at Noon Animations - IGN Video Series</span>
       </a>
     </div>
     <!-- Row 2 -->
@@ -73,6 +74,12 @@
         <a href="ads.html">
           <div class="image-container loading-icon"><img src="https://media.giphy.com/media/BWigEIB18I5wdEFxPR/giphy.gif" alt="e3 booth monitors"></div>
           <span>Advertisements for IGN</span>
+        </a>
+      </div>
+      <div class="item">
+        <a href="youtube.html">
+          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/uWzSBA7D39pNAl9LEU/giphy.gif" alt="youtube commissions"></div>
+          <span>YouTube Gaming Commissions</span>
         </a>
       </div>
       <div class="item">
