--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -88,6 +88,7 @@
 
 
         <!-- Transitions -->
+        <div class="art-display">
         <div class="art-section">
         <h2>Transitions</h2>
         <div class="art-sub-header">
@@ -105,6 +106,7 @@
 
 
         <!-- Lower Thirds -->
+        <div class="art-display">
         <h2>Lower Thirds, Upper Thirds, and Namebars</h2>
         <div class="art-sub-header">
           <p>Customizable lower and upper thirds were needed for easy use by the Video Team.  This involved me animating it in After Effects and then preparing the lower thirds as time responsive .MOGRT templates for Premiere Pro use.</p>
@@ -125,15 +127,33 @@
     </div>
 
         <!-- Snipe -->
+        <div class="art-display">
         <div class="art-section">
         <h2>Snipe</h2>
         <div class="art-sub-header">
           <p>Designed the snipe for future sponsored segments where a sponsor would need to be shown.</p>
         </div>
         <div class="full-image loading-icon">
-          <img src="https://media.giphy.com/media/ZB3MWMb0xs0oUvmaW6/source.gif"></div>
+          <img src="https://media.giphy.com/media/ZB3MWMb0xs0oUvmaW6/source.gif"></div></div>
 
 <br>
+
+          <!-- Title Card -->
+          <div class="art-display">
+          <div class="art-section">
+            <h2>Title Cards</h2>
+            <div class="art-sub-header">
+              <p>Title Card for episode/segment titles.  Template can be toggled from one, two, or three lines with After Effects-to-Premiere .mogrt files.</p>
+            </div>
+            <div class="full-image loading-icon">
+              <img src="https://media.giphy.com/media/cnX5ADESuLBP9Mq1Hr/source.gif"></div>
+            <div class="full-image loading-icon">
+              <img src="https://media.giphy.com/media/QxHa33rPbq4yRyrUDu/source.gif"></div>
+            <div class="full-image loading-icon">
+              <img src="https://media.giphy.com/media/LMuJzrQDWFWybppTPA/source.gif"></div></div>
+
+
+
         <!-- End Cards -->
         <div class="art-section">
         <h2>End Cards</h2>
