--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -63,8 +63,8 @@
         </div>
         <div class="full-image loading-icon">
             <div class="embed-container">
-              <iframe src="https://www.youtube.com/watch?v=PsNBajxsR7s" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-            </div>     
+                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=PsNBajxsR7s" frameborder="0" allow="autoplay; encrypted-media" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+              </div>   
       </div><br>
       <hr>
     </div>
