--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -63,9 +63,10 @@
         </div>
         <div class="full-image loading-icon">
             <div class="embed-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=PsNBajxsR7s" frameborder="0" allow="autoplay; encrypted-media" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-              </div>   
-      </div><br>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/PsNBajxsR7s" frameborder="0" allow="autoplay; encrypted-media" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            </div>
+          </div>
+<br>
       <hr>
     </div>
      
