--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
     <div class="item">
       <a href="e3-booth.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/XteMo3UVgqRgRIiUC2/giphy.gif" alt="e3 booth monitors"></div>
+        <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/f0bf06cc777d249fc98e0f2883f41bb2/tumblr_pujwwcSWhZ1tmp8rdo9_r1_400.png" alt="e3 booth monitors"></div>
         <span>IGN Live at E3 - Booth Monitors</span>
       </a>
     </div>
