--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
       <div class="item">
         <a href="suiting-up.html">
-          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/fxgVwHWTuYQKLC3zCI/source.gif" alt="suiting up"></div>
+          <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/388a4dd46dcb3f19483e1c065ebd2953/tumblr_pujwwcSWhZ1tmp8rdo10_r1_400.png" alt="suiting up"></div>
           <span>Suiting Up - IGN Video Series</span>
         </a>
       </div>
