--- a/index.html
+++ b/index.html
@@ -69,11 +69,17 @@
         <span>Up at Noon Animations - IGN Video Series</span>
       </a>
     </div>
-    <!-- Row 2 -->
     <div class="item">
         <a href="ads.html">
           <div class="image-container loading-icon"><img src="https://media.giphy.com/media/BWigEIB18I5wdEFxPR/giphy.gif" alt="e3 booth monitors"></div>
           <span>Advertisements for IGN</span>
+        </a>
+      </div>
+          <!-- Row 2 -->
+      <div class="item">
+        <a href="dailyui.html">
+          <div class="image-container loading-icon"><img src="https://cdn.dribbble.com/users/808936/screenshots/3372013/gif.gif" alt="behind the cosplay IGN video series"></div>
+          <span>Daily UI Challenge [Web & Mobile UI]</span>
         </a>
       </div>
       <div class="item">
@@ -88,7 +94,7 @@
           <span>Suiting Up - IGN Video Series</span>
         </a>
       </div>
-     <!-- Row 3 -->
+           <!-- Row 3 -->
      <div class="item">
       <a href="strive-for-five.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/2hgs0uUv9d3o6eb13e/giphy.gif" alt="strive for five challenge"></div>
@@ -107,6 +113,8 @@
         <span>IGN's New YouTube End Screens</span>
       </a>
     </div>
+
+        <!-- Row 4 -->
     <div class="item">
       <a href="e3-booth.html">
         <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/f0bf06cc777d249fc98e0f2883f41bb2/tumblr_pujwwcSWhZ1tmp8rdo9_r1_400.png" alt="e3 booth monitors"></div>
@@ -114,19 +122,13 @@
       </a>
     </div>
 
-    <!-- Row 4 -->
     <div class="item">
       <a href="antman.html">
         <div class="image-container loading-icon"><img src="https://media.giphy.com/media/5BYm9rzxIgI1T9OIsP/giphy.gif" alt="antman and the wasp hud"></div>
         <span>Ant-Man and the Wasp - IGN E3 Sponsor</span>
       </a>
     </div>
-    <div class="item">
-      <a href="dailyui.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/3JNGTvPcbHtMHKu6MH/giphy.gif" alt="behind the cosplay IGN video series"></div>
-        <span>Daily UI Challenge [Web & Mobile UI]</span>
-      </a>
-    </div>
+
     <div class="item">
         <a href="behind-the-cosplay.html">
           <div class="image-container loading-icon"><img src="https://media.giphy.com/media/1zkb1tLwY0hZjnEPDy/giphy.gif" alt="behind the cosplay"></div>
