--- a/about.html
+++ b/about.html
@@ -55,9 +55,9 @@
       </div>
       <div>
           <h2>Hello, I'm Kathleen!</h2>
-          <p>I'm a multidisciplinary designer and 2D animator based in San Francisco with a love for art, animation, video games, and anime. I love exploring ways design and art can connect brands with users and communities, as well as how it shapes our experiences with messages. I also like GIFs. A lot.</p>
-          <p>Outside of the office, I do remote work for clients ranging from YouTube gaming intros/outros, Twitch graphics, educational PSAs, animated art, and videos. If it's in my skill range, I'll take it on!</p>
-          <p>In my free time, you can find me <s>staring at Reddit all day</s> playing Rocket League, catching Pokemon, attending anime conventions, and trying to find more space in my room for posters and figures.</p>
+          <p>I'm a designer based in San Francisco with a passion for art, animation, video games, and anime. I love exploring ways design and motion can connect brands with communities, as well as how it shapes our experiences with products both on and off the screen. </p>
+          <p>Outside of the office, I do remote work for clients ranging from YouTube gaming intros/outros, Twitch graphics, educational PSAs, animated art, and videos.</p>
+          <p>In my free time, you can find me <s>staring at Reddit all day</s> playing Rocket League, catching Pokemon, attending anime conventions, and trying to find more space in my room for posters.</p>
       </div>
     </div>
   
