--- a/about.html
+++ b/about.html
@@ -41,7 +41,6 @@
       </div>
       <div id="menu-links">
         <span><a href="index.html">Portfolio</a></span>
-        <span><a target="_blank" href="https://drive.google.com/file/d/1irmmwqjdb_iXT6rve7aoKs-2bKsjp2nm/view">Resume</a></span>
         <span><a class="active-link" href="about.html">About</a></span>
         <span><a href="contact.html">Contact</a></span>
       </div>
@@ -58,6 +57,7 @@
           <p>I'm a designer based in San Francisco with a passion for art, animation, video games, and anime. I love exploring ways design and motion can connect brands with communities, as well as how it shapes our experiences with products both on and off the screen. </p>
           <p>Outside of the office, I do remote work for clients ranging from YouTube gaming intros/outros, Twitch graphics, educational PSAs, animated art, and videos.</p>
           <p>In my free time, you can find me <s>staring at Reddit all day</s> playing Rocket League, catching Pokemon, attending anime conventions, and trying to find more space in my room for posters.</p>
+          <p><a class="active-link" href="https://drive.google.com/open?id=1vCCLB7gDpeyjEjxyEnmMNsRThlQbKy9d"><u>View my resume</u></a></p>
       </div>
     </div>
   
