--- a/roadblock.html
+++ b/roadblock.html
@@ -155,7 +155,7 @@
       <div class="art-display">
         <!-- Row 1 -->
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/C9fYx/34d8501eee.png">
+          <img src="https://puu.sh/EeaKA/0fdfae9f0c.png">
         </div>
       </div>
     </div>
@@ -164,7 +164,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Metro: Exodus - Deep Silver</h2>
-        <p><a class="active-link" target="_blank" href="https://puu.sh/C9lTS/fd2c1647a1.mp4">Autoplay video</a></p>
+        <p><a class="active-link" target="_blank" href="https://puu.sh/EeaMg/401691d9ab.mp4">Autoplay video</a></p>
       </div>
       <div class="art-display">
         <!-- Row 1 -->
@@ -182,7 +182,7 @@
       <div class="art-display">
         <!-- Row 1 -->
         <div class="full-image loading-icon">
-          <img src="https://puu.sh/C8OOg/680b74c12d.png">
+          <img src="https://puu.sh/EeaLy/3ec87cea73.png">
         </div>
       </div>
     </div>
