--- a/manga.html
+++ b/manga.html
@@ -73,7 +73,7 @@
       <!--Juuzou-->
       <div class="art-display">
         <div class="half-image">
-          <img src="https://puu.sh/tY3FR/594caa0267.png">
+          <img src="https://66.media.tumblr.com/5be13f2017b6c4c303294f231f8fa5f1/tumblr_plgd0eA6Jw1tmp8rdo1_1280.jpg">
           <img src="https://media.giphy.com/media/d1E2pMuuM6zJ0CuQ/source.gif">
         </div>
       </div>
