--- a/manga.html
+++ b/manga.html
@@ -66,7 +66,7 @@
       <!--Haise Jump-->
       <div class="art-display">
         <div class="half-image">
-          <img src="https://puu.sh/tY3ly/dbfb233c93.png">
+          <img src="https://66.media.tumblr.com/5350bf451202d568318e4ec5219981ab/tumblr_pn73tiAN3l1tmp8rdo4_r2_400.jpg">
           <img src="https://media.giphy.com/media/26xBGqnWsLHFRYLrG/giphy.gif">
         </div>
       </div>
