--- a/manga.html
+++ b/manga.html
@@ -80,7 +80,7 @@
       <!--Owari-->
       <div class="art-display">
         <div class="half-image">
-          <img src="https://puu.sh/uBd0H/3b786a7ba3.png">
+          <img src="https://66.media.tumblr.com/f0b8b6dd45f7ec1bbf1cc13835924719/tumblr_pn73tiAN3l1tmp8rdo5_r2_400.jpg">
           <img src="https://media.giphy.com/media/xUPGcAYFrg2DprS3m0/source.gif">
         </div>
       </div>
