--- a/gaming.html
+++ b/gaming.html
@@ -51,8 +51,8 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-        <h2>YouTube Gaming Commissions</h2>
-        <p>Select intro commissions done for gaming YouTubers.
+        <h2>YouTube & Twitch Gaming Commissions</h2>
+        <p>Select commissions done for gaming streamers.
           Static character art was provided by clients with permission to animate.</p>
       </div>
       <div class="art-display">
@@ -73,6 +73,9 @@
         <!-- Row 3 -->
         <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/k72Phd9MkDVDmobRtr/giphy.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/kumateddi-for-tumblr_orig.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://66.media.tumblr.com/c5ccb1bc950e6742a756f89b77a313ac/tumblr_pv276yUUUh1vihf3to1_540.gif">
@@ -119,6 +122,20 @@
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/animated-gif-downsized-large-2_orig.gif">
         </div>
+
+
+
+        <div class="art-sub-header">
+          <p>Twitch alerts for streamers.</p>
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/tweet-me-1_orig.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/image-processing20191030-22252-1ymgmj7_orig.gif">
+        </div>
+
+
       </div>
       <hr>
     </div>
