--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         </a>
       </div>
       <div class="item">
-        <a href="youtube.html">
+        <a href="gaming.html">
           <div class="image-container loading-icon"><img src="https://media.giphy.com/media/STeuUlOeXvTFOm8aUL/source.gif" alt="youtube commissions"></div>
-          <span>YouTube Gaming Commissions</span>
+          <span>Gaming Commissions</span>
         </a>
       </div>
       <div class="item">
