--- a/ads.html
+++ b/ads.html
@@ -69,7 +69,7 @@
         <div class="full-image loading-icon">
           <img src="https://66.media.tumblr.com/0d66ff450306881a52866774f373bd60/tumblr_pj19b9EUTD1tmp8rdo5_r1_1280.jpg">
           <video width="100%" autoplay muted loop>
-              <source src="https://puu.sh/DRwSJ/7ad0a5cfc8.mp4" type="video/mp4">
+              <source src="https://puu.sh/GoGJN/65001a3f5b.mp4" type="video/mp4">
             </video>
         </div>
         <!--Row 2-->
