--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -98,7 +98,7 @@
           <img src="https://media.giphy.com/media/U3yt6n8qCg4WwkQG1o/source.gif">
         </div>
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/DWyWe/7cd8fca26d.mp4" type="video/mp4">
+          <source src="https://puu.sh/GoHiv/a11bafc773.mp4" type="video/mp4">
         </video>
           <div class="full-image loading-icon">
           <img src="https://media.giphy.com/media/iDmFE3gwC6PBFAyUaS/source.gif">
