--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -115,7 +115,7 @@
           <img src="https://media.giphy.com/media/W30U221RorPJVDypsY/source.gif">
         </div>
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/DWzxV/33b8b591b4.mp4" type="video/mp4">
+          <source src="https://puu.sh/GoHkq/a99a84aa85.mp4" type="video/mp4">
         </video>
          <!-- Row 4 -->
          <div class="art-sub-header">
