--- a/anime-omake.html
+++ b/anime-omake.html
@@ -208,6 +208,9 @@
         <div class="art-sub-header">
             <p>Animated snipe advertising the show's sponsor.  I used the ribbon theme that was explored during logo drafts.</p>
         </div>
+        <div class="full-image loading-icon">
+          <img src="https://puu.sh/GoHNf/1451d4f204.gif">
+        </div>
         <div class="full-image loading-icon">  
           <video width="100%" autoplay muted loop>
             <source src="https://puu.sh/BJZnO.mp4" type="video/mp4">
