--- a/behind-the-cosplay.html
+++ b/behind-the-cosplay.html
@@ -53,10 +53,6 @@
       <div class="art-header">
       </div>
       <div class="art-display">
-        <!-- Row 1 -->
-        <div class="full-image loading-icon">
-          <img src="https://static1.squarespace.com/static/5abd1e517e3c3a8774569b21/5ac3d06388251b42df41d002/5af4914eaa4a994407f6c85d/1537982635363/btc_thumb.png?format=2500w">
-        </div>
         <!-- Row 2 -->
         <div class="art-sub-header">
           <p>Animated and designed video graphics for IGN's <a class="active-link" target="_blank" href="https://www.ign.com/watch/behind-the-cosplay">Behind the Cosplay</a> mini-documentary series centered around cosplaying Iden Versio, the protagonist of Star Wars: Battlefront II.</p>
@@ -91,7 +87,7 @@
         </div>
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/CHNQJ.mp4" type="video/mp4">
+            <source src="https://puu.sh/GoHU9/30c194070c.mp4" type="video/mp4">
           </video>
         </div>
         <!-- Row 3 -->
