--- a/gaming.html
+++ b/gaming.html
@@ -58,12 +58,15 @@
       <div class="art-display">
         <!-- Row 1 -->
         <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/20NVx9H6CZvQ7U7NDD/giphy.gif">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/vixella-540_orig.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/SIuhRluNb4FxmbzctN/giphy.gif">
         </div>
         <!-- Row 2 -->
+        <div class="half-image loading-icon">
+          <img src="https://media.giphy.com/media/20NVx9H6CZvQ7U7NDD/giphy.gif">
+        </div>
         <div class="half-image loading-icon">
           <img src="https://media.giphy.com/media/4H1AvX2Z3bnmPH9laD/giphy.gif">
         </div>
@@ -103,6 +106,9 @@
           <p>Select outro commissions done for YouTubers.</p>
         </div>
         <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/twitter-outro_orig.gif">
+        </div>
+        <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/wolf-outro_orig.gif">
         </div>
         <div class="half-image loading-icon">
@@ -129,10 +135,19 @@
           <p>Twitch alerts for streamers.</p>
         </div>
         <div class="half-image loading-icon">
+          <div class="half-image loading-icon">
+            <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/twitter_orig.gif">
+          </div>
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/tweet-me-1_orig.gif">
         </div>
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/image-processing20191030-22252-1ymgmj7_orig.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/gamingmama-540_orig.gif">
+        </div>
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pawberri-weebly_orig.gif">
         </div>
 
 
