--- a/gaming.html
+++ b/gaming.html
@@ -134,10 +134,10 @@
         <div class="art-sub-header">
           <p>Twitch alerts for streamers.</p>
         </div>
-          <div class="full-image loading-icon">
+          <div class="half-image loading-icon">
             <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/twitter_orig.gif">
           </div>
-          <div class="full-image loading-icon">
+          <div class="fuhalfll-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/tweet-me-1_orig.gif">
         </div>
         <div class="half-image loading-icon">
@@ -147,7 +147,7 @@
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/gamingmama-540_orig.gif">
         </div>
         <div class="half-image loading-icon">
-          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pawberri-weebly_orig.gif">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pawberry-weebly-2_orig.gif">
         </div>
 
 
