--- a/gaming.html
+++ b/gaming.html
@@ -137,7 +137,7 @@
           <div class="half-image loading-icon">
             <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/twitter_orig.gif">
           </div>
-          <div class="fuhalfll-image loading-icon">
+          <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/tweet-me-1_orig.gif">
         </div>
         <div class="half-image loading-icon">
