--- a/gaming.html
+++ b/gaming.html
@@ -132,7 +132,7 @@
 
 
         <div class="art-sub-header">
-          <p>Twitch alerts for streamers.</p>
+          <p>Twitch commissions for streamers.</p>
         </div>
           <div class="half-image loading-icon">
             <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/twitter_orig.gif">
