add fixes to index file

--- a/index.html
+++ b/index.html
@@ -1,168 +1,274 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <title>Kathleen Oum | Graphic &amp; Motion Design</title>
-  <meta name="description" content="Design and Animation Portfolio">
-  <meta name="author" content="Kathleen Oum">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+  <head>
+    <title>Kathleen Oum | Graphic &amp; Motion Design</title>
+    <meta name="description" content="Design and Animation Portfolio" />
+    <meta name="author" content="Kathleen Oum" />
 
-  <!-- Facebook Open Graph -->
-  <meta property="og:title" content="Kathleen Oum | Graphic &amp; Motion Design">
-  <meta property="og:description" content="Design and Animation Portfolio">
-  <meta property="og:image" content="img/embed.png">
-  <meta property="og:url" content="http://koum.asligar.com">
+    <!-- Facebook Open Graph -->
+    <meta
+      property="og:title"
+      content="Kathleen Oum | Graphic &amp; Motion Design"
+    />
+    <meta property="og:description" content="Design and Animation Portfolio" />
+    <meta property="og:image" content="img/embed.png" />
+    <meta property="og:url" content="https://www.kathleenoum.com" />
+    <!-- Facebook Open Graph -->
 
-  <!-- Twitter -->
-  <meta name="twitter:title" content="Kathleen Oum | Graphic &amp; Motion Design">
-  <meta name="twitter:description" content="Design and Animation Portfolio">
-  <meta name="twitter:image" content=" img/embed.png">
-  <meta name="twitter:card" content="summary_large_image">
+    <!-- Twitter -->
+    <meta
+      name="twitter:title"
+      content="Kathleen Oum | Graphic &amp; Motion Design"
+    />
+    <meta name="twitter:description" content="Design and Animation Portfolio" />
+    <meta name="twitter:image" content="img/embed.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <!-- Twitter -->
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="img/favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="img/favicon.png" />
 
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
-  <link href="css/index.css" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossorigin="anonymous"
+    />
+    <link href="css/normalize.min.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
+    <link href="css/index.css" rel="stylesheet" />
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
-  <script src="js/menu.js" type="text/javascript"></script>
-</head>
-<body>
-  <div id="header">
-    <div id="logo">
-      <h1><a href="/">Kathleen Oum</a></h1>
-      <h2>Graphic &amp; Motion Design</h2>
-    </div>
-    <div id="menu">
-      <div id="menu-hamburger" class="menu-closed">
-        <img src="img/bar_menu.svg" alt="menu">
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+      type="text/javascript"
+      async
+    ></script>
+    <script src="js/menu.js" type="text/javascript" async></script>
+  </head>
+  <body>
+    <div id="header">
+      <div id="logo">
+        <h1><a href="/">Kathleen Oum</a></h1>
+        <h2>Graphic &amp; Motion Design</h2>
       </div>
-      <nav id="menu-links">
-        <span><a class="active-link" href="https://www.kathleenoum.com">Portfolio</a></span>
-        <span><a href="about.html">About</a></span>
-        <span><a href="contact.html">Contact</a></span>
-      </nav>
-    </div>
-  </div>
-
-  <div id="content">
-    <!-- Row 1 -->
-    <div class="item">
-      <a href="vector.html">
-        <div class="image-container loading-icon"><img src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif" alt="vector art"></div>
-        <span>Vector Art</span>
-      </a>
-    </div>
-    <div class="item">
-      <a href="anime-omake.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/3htJqNlP6Ym6LOU2AT/giphy.gif" alt="anime omake"></div>
-        <span>Anime Omake - IGN Video Series</span>
-      </a>
+      <div id="menu">
+        <div id="menu-hamburger" class="menu-closed">
+          <img src="img/bar_menu.svg" alt="menu" />
+        </div>
+        <nav id="menu-links">
+          <span
+            ><a class="active-link" href="https://www.kathleenoum.com"
+              >Portfolio</a
+            ></span
+          >
+          <span><a href="about.html">About</a></span>
+          <span><a href="contact.html">Contact</a></span>
+        </nav>
+      </div>
     </div>
 
-    <div class="item">
-      <a href="up-at-noon.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/hrXqOivq9pYBMz0w5Q/source.gif" alt="up at noon"></div>
-        <span>Up at Noon Animations - IGN Video Series</span>
-      </a>
-    </div>
-    <div class="item">
+    <div id="content">
+      <!-- Row 1 -->
+      <div class="item">
+        <a href="vector.html">
+          <div class="image-container loading-icon">
+            <img
+              src="https://78.media.tumblr.com/1bbacdd1b6fecbd49db7773dcd723d67/tumblr_ouwkbiXZMx1vihf3to1_540.gif"
+              alt="vector art"
+            />
+          </div>
+          <span>Vector Art</span>
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="anime-omake.html">
+          <div class="image-container loading-icon">
+            <img
+              src="https://media.giphy.com/media/3htJqNlP6Ym6LOU2AT/giphy.gif"
+              alt="anime omake"
+            />
+          </div>
+          <span>Anime Omake - IGN Video Series</span>
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="up-at-noon.html">
+          <div class="image-container loading-icon">
+            <img
+              src="https://media.giphy.com/media/hrXqOivq9pYBMz0w5Q/source.gif"
+              alt="up at noon"
+            />
+          </div>
+          <span>Up at Noon Animations - IGN Video Series</span>
+        </a>
+      </div>
+
+      <!-- Row 2 -->
+      <div class="item">
         <a href="ads.html">
-          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/BWigEIB18I5wdEFxPR/giphy.gif" alt="e3 booth monitors"></div>
+          <div class="image-container loading-icon">
+            <img
+              src="https://media.giphy.com/media/BWigEIB18I5wdEFxPR/giphy.gif"
+              alt="e3 booth monitors"
+            />
+          </div>
           <span>Advertisements for IGN</span>
         </a>
       </div>
-          <!-- Row 2 -->
+
       <div class="item">
         <a href="dailyui.html">
-          <div class="image-container loading-icon"><img src="https://cdn.dribbble.com/users/808936/screenshots/3372013/gif.gif" alt="behind the cosplay IGN video series"></div>
+          <div class="image-container loading-icon">
+            <img
+              src="https://cdn.dribbble.com/users/808936/screenshots/3372013/gif.gif"
+              alt="behind the cosplay IGN video series"
+            />
+          </div>
           <span>Daily UI Challenge [Web & Mobile UI]</span>
         </a>
       </div>
+
       <div class="item">
         <a href="gaming.html">
-          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/STeuUlOeXvTFOm8aUL/source.gif" alt="youtube commissions"></div>
+          <div class="image-container loading-icon">
+            <img
+              src="https://media.giphy.com/media/STeuUlOeXvTFOm8aUL/source.gif"
+              alt="youtube commissions"
+            />
+          </div>
           <span>Gaming Commissions</span>
         </a>
       </div>
+
+      <!-- Row 3 -->
       <div class="item">
         <a href="suiting-up.html">
-          <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/388a4dd46dcb3f19483e1c065ebd2953/tumblr_pujwwcSWhZ1tmp8rdo10_r1_400.png" alt="suiting up"></div>
+          <div class="image-container loading-icon">
+            <img
+              src="https://66.media.tumblr.com/388a4dd46dcb3f19483e1c065ebd2953/tumblr_pujwwcSWhZ1tmp8rdo10_r1_400.png"
+              alt="suiting up"
+            />
+          </div>
           <span>Suiting Up - IGN Video Series</span>
         </a>
       </div>
-           <!-- Row 3 -->
-     <div class="item">
-      <a href="strive-for-five.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/2hgs0uUv9d3o6eb13e/giphy.gif" alt="strive for five challenge"></div>
-        <span>Strive for Five Challenge</span>
-      </a>
-    </div>
-    <div class="item">
-      <a href="roadblock.html">
-        <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/c6595a904f2b35430292a63eb263b9f1/tumblr_pujwwcSWhZ1tmp8rdo6_r2_400.png" alt="e3 booth monitors"></div>
-        <span>IGN Homepage Roadblocks</span>
-      </a>
-    </div>
-    <div class="item">
-      <a href="endscreen.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/YPyRtgL1VgSAMIXw5e/source.gif" alt="endscreen"></div>
-        <span>IGN's New YouTube End Screens</span>
-      </a>
-    </div>
 
-        <!-- Row 4 -->
-    <div class="item">
-      <a href="e3-booth.html">
-        <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/f0bf06cc777d249fc98e0f2883f41bb2/tumblr_pujwwcSWhZ1tmp8rdo9_r1_400.png" alt="e3 booth monitors"></div>
-        <span>IGN Live at E3 - Booth Monitors</span>
-      </a>
-    </div>
+      <div class="item">
+        <a href="strive-for-five.html">
+          <div class="image-container loading-icon">
+            <img
+              src="https://media.giphy.com/media/2hgs0uUv9d3o6eb13e/giphy.gif"
+              alt="strive for five challenge"
+            />
+          </div>
+          <span>Strive for Five Challenge</span>
+        </a>
+      </div>
 
-    <div class="item">
-      <a href="antman.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/5BYm9rzxIgI1T9OIsP/giphy.gif" alt="antman and the wasp hud"></div>
-        <span>Ant-Man and the Wasp - IGN E3 Sponsor</span>
-      </a>
-    </div>
+      <div class="item">
+        <a href="roadblock.html">
+          <div class="image-container loading-icon">
+            <img
+              src="https://66.media.tumblr.com/c6595a904f2b35430292a63eb263b9f1/tumblr_pujwwcSWhZ1tmp8rdo6_r2_400.png"
+              alt="e3 booth monitors"
+            />
+          </div>
+          <span>IGN Homepage Roadblocks</span>
+        </a>
+      </div>
 
-    <div class="item">
+      <!-- Row 4 -->
+      <div class="item">
+        <a href="endscreen.html">
+          <div class="image-container loading-icon">
+            <img
+              src="https://media.giphy.com/media/YPyRtgL1VgSAMIXw5e/source.gif"
+              alt="endscreen"
+            />
+          </div>
+          <span>IGN's New YouTube End Screens</span>
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="e3-booth.html">
+          <div class="image-container loading-icon">
+            <img
+              src="https://66.media.tumblr.com/f0bf06cc777d249fc98e0f2883f41bb2/tumblr_pujwwcSWhZ1tmp8rdo9_r1_400.png"
+              alt="e3 booth monitors"
+            />
+          </div>
+          <span>IGN Live at E3 - Booth Monitors</span>
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="antman.html">
+          <div class="image-container loading-icon">
+            <img
+              src="https://media.giphy.com/media/5BYm9rzxIgI1T9OIsP/giphy.gif"
+              alt="antman and the wasp hud"
+            />
+          </div>
+          <span>Ant-Man and the Wasp - IGN E3 Sponsor</span>
+        </a>
+      </div>
+
+      <!-- Row 5 -->
+      <div class="item">
         <a href="behind-the-cosplay.html">
-          <div class="image-container loading-icon"><img src="https://media.giphy.com/media/1zkb1tLwY0hZjnEPDy/giphy.gif" alt="behind the cosplay"></div>
+          <div class="image-container loading-icon">
+            <img
+              src="https://media.giphy.com/media/1zkb1tLwY0hZjnEPDy/giphy.gif"
+              alt="behind the cosplay"
+            />
+          </div>
           <span>Behind the Cosplay - IGN Video Series</span>
         </a>
       </div>
 
-     <!-- Row 5 -->
-
-
-     <div class="item">
-      <a href="manga.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/DCWHrUm3WEGpNWN0RO/giphy.gif" alt="motion manga"></div>
-        <span>Motion Manga, Art, and GIFs (for fun!)</span>
-      </a>
-    </div>
-
-     <div class="item">
-        <a href="miniscroller.html">
-          <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/34894daaa0da6c23c82f7e632d6a8d9f/tumblr_piziu5dhLr1tmp8rdo7_r2_400.png" alt="miniscroller"></div>
-          <span>Miniscrollers</span>
+      <div class="item">
+        <a href="manga.html">
+          <div class="image-container loading-icon">
+            <img
+              src="https://media.giphy.com/media/DCWHrUm3WEGpNWN0RO/giphy.gif"
+              alt="motion manga"
+            />
+          </div>
+          <span>Motion Manga, Art, and GIFs (for fun!)</span>
         </a>
       </div>
 
       <div class="item">
-        <a href="toy-temple.html">
-          <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/78c173facbdc7f98f1aefc88c0fe8624/tumblr_pujwwcSWhZ1tmp8rdo5_r1_400.png" alt="toy temple"></div>
-          <span>Anime Expo - Toy Temple Booth</span>
+        <a href="miniscroller.html">
+          <div class="image-container loading-icon">
+            <img
+              src="https://66.media.tumblr.com/34894daaa0da6c23c82f7e632d6a8d9f/tumblr_piziu5dhLr1tmp8rdo7_r2_400.png"
+              alt="miniscroller"
+            />
+          </div>
+          <span>Miniscrollers</span>
         </a>
       </div>
 
-      
-
-
-  </div>
-
-</body>
+      <!-- Row 6 -->
+      <div class="item">
+        <a href="toy-temple.html">
+          <div class="image-container loading-icon">
+            <img
+              src="https://66.media.tumblr.com/78c173facbdc7f98f1aefc88c0fe8624/tumblr_pujwwcSWhZ1tmp8rdo5_r1_400.png"
+              alt="toy temple"
+            />
+          </div>
+          <span>Anime Expo - Toy Temple Booth</span>
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
