--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
           <p>Outside of work, I do freelance work for clients ranging from YouTube gaming intros/outros, Twitch graphics, educational PSAs, animated art, and videos.</p>
           <p>In my free time, you can find me <s>staring at Reddit all day</s> streaming Genshin Impact, catching Pokemon, attending anime conventions, and buying more plushies.</p>
 
-          <p><a class="active-link" href="https://drive.google.com/open?id=1vCCLB7gDpeyjEjxyEnmMNsRThlQbKy9d"><u>View my resume</u></a></p>
+          <p><a class="active-link" href="https://drive.google.com/file/d/1jDKiI9BGHUxvT6XMgXuB8B7DAMeE9R3z/view?usp=sharing"><u>View my resume</u></a></p>
       </div>
     </div>
   
