--- a/anime-omake.html
+++ b/anime-omake.html
@@ -201,7 +201,7 @@
         </div>
         <div class="full-image loading-icon">
           <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/GoGPM/60dc377286.mp4" type="video/mp4">
+            <source src="https://puu.sh/I6cwm/98933a2a62.gif" type="video/mp4">
           </video>
         </div>
         <!-- Row 10 -->
