--- a/anime-omake.html
+++ b/anime-omake.html
@@ -192,17 +192,13 @@
                     <p>Animated intro with anime cuts and sponsor scene.</p>
                   </div>
                   <div class="full-image loading-icon">
-                    <video width="100%" autoplay muted loop>
-                      <source src="https://puu.sh/CZuID/7d9e68d6ed.mp4" type="video/mp4">
-                    </video>
+                    <img src="https://puu.sh/I6cwm/98933a2a62.gif">
                   </div>
                   <div class="art-sub-header">
           <p>Transition animation for the video editors to use between scene changes.</p>
         </div>
         <div class="full-image loading-icon">
-          <video width="100%" autoplay muted loop>
-            <source src="https://puu.sh/I6cwm/98933a2a62.gif" type="video/mp4">
-          </video>
+          <img src="https://puu.sh/I6cs9/c6d16be7ae.gif">
         </div>
         <!-- Row 10 -->
         <div class="art-sub-header">
