--- a/anime-omake.html
+++ b/anime-omake.html
@@ -192,7 +192,9 @@
                     <p>Animated intro with anime cuts and sponsor scene.</p>
                   </div>
                   <div class="full-image loading-icon">
-                    <img src="https://puu.sh/I6cwm/98933a2a62.gif">
+                    <video width="100%" autoplay muted loop>
+                      <source src="https://puu.sh/I6cz9/c20eac1f8a.mp4" type="video/mp4">
+                    </video>
                   </div>
                   <div class="art-sub-header">
           <p>Transition animation for the video editors to use between scene changes.</p>
