--- a/up-at-noon.html
+++ b/up-at-noon.html
@@ -82,7 +82,7 @@
         
         </div> 
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/DWz1D/f6e899b792.mp4" type="video/mp4">
+          <source src="https://puu.sh/I6cBY/28aaff98c7.mp4" type="video/mp4">
         </video>
       </div>
 
@@ -98,7 +98,7 @@
           <img src="https://media.giphy.com/media/U3yt6n8qCg4WwkQG1o/source.gif">
         </div>
         <video width="100%" autoplay muted loop>
-          <source src="https://puu.sh/GoHiv/a11bafc773.mp4" type="video/mp4">
+          <source src="https://puu.sh/I6cDA/79256d9367.mp4" type="video/mp4">
         </video>
           <div class="full-image loading-icon">
           <img src="https://media.giphy.com/media/iDmFE3gwC6PBFAyUaS/source.gif">
