--- a/suiting-up.html
+++ b/suiting-up.html
@@ -104,7 +104,9 @@
         <div class="full-image loading-icon">
           <img src="https://i.imgur.com/mdRDZaZ.jpg">
         </div>
-        <iframe width="1000" height="563" src="https://www.youtube.com/embed/2rzvc4C5Al4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <video width="100%" autoplay muted loop>
+          <source src="https://puu.sh/I6cLL/382df0b85b.mp4" type="video/mp4">
+        </video>
       </div>
       <hr>
     </div>
