--- a/suiting-up.html
+++ b/suiting-up.html
@@ -99,10 +99,7 @@
         </div>
          <!-- Row 4 -->
          <div class="art-sub-header">
-          <p>Upon review, the client came back with that they wanted the show to be branded more as Anthem rather than an IGN show with its own branding.  Below is how the intro turned out using Anthem's pink/orange gradient with my HUD interface. Includes the animated version with an editable episode slate for Video team's use.</p>
-        </div>
-        <div class="full-image loading-icon">
-          <img src="https://i.imgur.com/mdRDZaZ.jpg">
+          <p>Upon review, the client came back with that they wanted the show to be branded more as Anthem rather than an IGN show with its own branding.  Below is how the intro turned out using Anthem's pink/orange gradient with my HUD interface. Includes the editable episode slate for Video team's use.</p>
         </div>
         <video width="100%" autoplay muted loop>
           <source src="https://puu.sh/I6cLL/382df0b85b.mp4" type="video/mp4">
