--- a/gaming.html
+++ b/gaming.html
@@ -113,6 +113,9 @@
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/twitter-outro_orig.gif">
         </div>
         <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/twitter-outro-v2_orig.gif">
+        </div>
+        <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/wolf-outro_orig.gif">
         </div>
         <div class="half-image loading-icon">
