--- a/gaming.html
+++ b/gaming.html
@@ -154,7 +154,9 @@
         <div class="half-image loading-icon">
           <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/pawberry-weebly-2_orig.gif">
         </div>
-
+        <div class="half-image loading-icon">
+          <img src="https://kaeveeoh.weebly.com/uploads/1/2/0/3/120374443/alerts-twitter_orig.gif">
+        </div>
 
       </div>
       <hr>
