--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
       </a>
     </div>
     <div class="item">
-      <a href="endscreen.html">
-        <div class="image-container loading-icon"><img src="https://media.giphy.com/media/YPyRtgL1VgSAMIXw5e/source.gif" alt="endscreen"></div>
-        <span>IGN's New YouTube End Screens</span>
+      <a href="toy-temple.html">
+        <div class="image-container loading-icon"><img src="https://66.media.tumblr.com/78c173facbdc7f98f1aefc88c0fe8624/tumblr_pujwwcSWhZ1tmp8rdo5_r1_400.png" alt="toy temple"></div>
+        <span>Anime Expo - Toy Temple Booth</span>
       </a>
     </div>
 
